save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -64,8 +64,10 @@
 	  </p>
 	  
       <p>
-      The <strong>third</strong> category of expanded terms allows further description of Entities. The property <a href="#value" class="qname">prov:value</a> holds a literal value for the Entity. For example, the <span class="repeated">prov:value</span> of a quote could be a string of the sentences stated, or the <span class="repeated">prov:value</span> of an Entity involved in a numeric calculation could be the xsd:integer four.
-		 The property <a href="#atLocation" class="qname">prov:atLocation</a> can be used to describe the <a href="#Location" class="qname">prov:Location</a> of any 
+      The <strong>third</strong> category of expanded terms allows further description of Entities. The property <a href="#value" class="qname">prov:value</a> 
+      provides a literal value that is a direct representation of an entity. 
+      For example, the <span class="repeated">prov:value</span> of a quote could be a string of the sentences stated, or the <span class="repeated">prov:value</span> of an Entity involved in a numeric calculation could be the xsd:integer four.
+	   The property <a href="#atLocation" class="qname">prov:atLocation</a> can be used to describe the <a href="#Location" class="qname">prov:Location</a> of any 
       Entity, Activity, Agent, or <a href="#InstantaneousEvent" class="qname">prov:InstantaneousEvent</a> 
       (i.e., generation, usage, or invalidation of an entity and the starting or ending of an activity). 
       The properties used to describe instances of <span class="repeated">prov:Location</span> are outside the scope of PROV-O; 
