--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -69,7 +69,7 @@
       For example, the <span class="repeated">prov:value</span> of a quote could be a string of the sentences stated, or the <span class="repeated">prov:value</span> of an Entity involved in a numeric calculation could be the xsd:integer four.
 	   The property <a href="#atLocation" class="qname">prov:atLocation</a> can be used to describe the <a href="#Location" class="qname">prov:Location</a> of any 
       Entity, Activity, Agent, or <a href="#InstantaneousEvent" class="qname">prov:InstantaneousEvent</a> 
-      (i.e., generation, usage, or invalidation of an entity and the starting or ending of an activity). 
+      (i.e., the starting or ending of an activity or the generation, usage, or invalidation of an entity). 
       The properties used to describe instances of <span class="repeated">prov:Location</span> are outside the scope of PROV-O; 
       reuse of other existing vocabulary is encouraged.
 		</p>
