save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -83,7 +83,9 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
       </p>
 
       <p>The <strong>fifth</strong> category of expanded terms describes the lifetime of an Activity beyond its start and end times and predecessor Activities.  
-      Activities may also be started or ended by Entities, which are described using the properties <a href="#wasStartedBy" class="qname">prov:wasStartedBy</a> and <a href="#wasEndedBy" class="qname">prov:wasEndedBy</a>, respectively. Since Entities may start or end Activities, and Agents may be Entities, then Agents may also start or end Activities.
+      Activities may also be started or ended by Entities, which are described using the properties <a href="#wasStartedBy" class="qname">prov:wasStartedBy</a> 
+      and <a href="#wasEndedBy" class="qname">prov:wasEndedBy</a>, respectively. Since Entities may start or end Activities, and Agents may be Entities, 
+      then Agents may also start or end Activities.
       </p>
 
         <div id="narrative-example-expanded-1" about="#narrative-example-expanded-1" 
