--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -90,8 +90,8 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
 
         <div id="narrative-example-expanded-1" about="#narrative-example-expanded-1" 
             typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-           <p>We illustrate below the use of the expanded terms using the crime file example from the previous section as reference. After his previous actions, Derek then published a post about
-		   his work with the aggregated file.
+           <p>The following example illustrates the expanded terms using the crime chart example from the previous section. 
+              After creating the chart, Derek published a post about his work with the aggregated dataset.
             </p> 
             <p>   
                <a href="#narrative-example-expanded-1"/>Example 2</a>:
@@ -102,17 +102,17 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
         </div>
 		   
 		   <p>
-		   Agent <code>ex:derek</code>, acting again on behalf of the <code>:national_newspaper_inc</code> organization, 
-		   published a post about his recent changes to the aggregated file (<code>ex:aggregatedByRegions</code>) using the tool <code>ex:postEditor</code> (which was included in a user action tracking system compliant to PROV). 
-		   Since he was the one who started and ended the publishing activity (<code>ex:publicationActivity1123</code>), that information
-		   was recorded as well. The post produced by <code>ex:derek</code> (<code>ex:post9821v1</code>) included a permanent link where the content of the latest version is shown
-		   (<code>ex:more-crime-happens-in-cities</code>) plus a snapshot of the content of the current version (<code>ex:postContent0</code>). Derek also added additional metadata of the post, like the title.
+		   Agent <code>:derek</code>, acting again on behalf of the <code>:national_newspaper_inc</code> organization, 
+		   published a post about his recent changes to the aggregated file (<code>:aggregatedByRegions</code>) using the tool <code>:postEditor</code> (which was included in a user action tracking system compliant to PROV). 
+		   Since he was the one who started and ended the publishing activity (<code>:publicationActivity1123</code>), that information
+		   was recorded as well. The post produced by <code>:derek</code> (<code>:post9821v1</code>) included a permanent link where the content of the latest version is shown
+		   (<code>:more-crime-happens-in-cities</code>) plus a snapshot of the content of the current version (<code>:postContent0</code>). Derek also added additional metadata of the post, like the title.
 		   </p>
 		   <p>
 		   However, shortly after having published the post, Derek detected a typo. He didn't want to record the activity that led to the new version, so he just created a new version and 
-		   summarized the changes in a revision of the original post (<code>ex:post9821v2</code>). This revision was also an alternate of the original post, 
+		   summarized the changes in a revision of the original post (<code>:post9821v2</code>). This revision was also an alternate of the original post, 
          since they were both forms of the long-standing blog.
-         Thus, the permalink to the latest version (<code>ex:more-crime-happens-in-cities</code>) remained the same in the new revision, but a different URL was given for its snapshot (<code>ex:postContent1</code>).
+         Thus, the permalink to the latest version (<code>:more-crime-happens-in-cities</code>) remained the same in the new revision, but a different URL was given for its snapshot (<code>ex:postContent1</code>).
 		   </p>		   
 
          <div id="expanded-example-illustration-1" style="text-align: center;" class="figure">
@@ -122,18 +122,21 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
                     alt="PROV-O Starting Point terms"/>
 
                <div class="figcaption"><a href="#expanded-example-illustration-1">Figure 4</a>. 
-                  An illustration of the PROV-O assertions in <a href="#narrative-example-expanded-1">Example 3</a>, where Derek published two versions of a blog for the National Newspaper, Inc.
-         The diagrams in this document depict Entities as yellow ovals, Activities as blue rectangles, and Agents as orange pentagons.
+                  An illustration of the PROV-O assertions in <a href="#narrative-example-expanded-1">Example 3</a>, 
+                  where Derek published two versions of a blog for the National Newspaper, Inc.<br/>
+                  The diagrams in this document depict Entities as yellow ovals, Activities as blue rectangles, and Agents as orange pentagons.
                </div>
          </div>
 
 
  
 		 <div id="narrative-example-expanded-1-a" about="#narrative-example-expanded-1-a" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-           <p>Shortly after Derek's post publication, Monica adapted the text for a wider audience in a new post (<code>ex:post9822</code>). This version was a specialization of the original post,
-		   and an alternate of the version modified by Derek. Since the provenance produced by the activities of Derek and Monica corresponded to different user views, the system
-		   automatically published it in different <a href="#Bundle" class="qname">prov:Bundles</a>. The system also tagged them as the involved users 
-			with the bundle (so as to be able to locate easily their actions) and added additional metadata, such as the date of creation of the bundle or the creator.
+           <p>Shortly after Derek's post publication, Monica adapted the text for a wider audience in a new post (<code>:post9822</code>). 
+            This version was a specialization of the original post, and an alternate of the version modified by Derek. 
+            Since the provenance produced by the activities of Derek and Monica corresponded to different user views, the system
+		      automatically published it in different <a href="#Bundle" class="qname">prov:Bundles</a>. 
+            The system also tagged them as the involved users 
+			   with the bundle (so as to be able to locate easily their actions) and added additional metadata, such as the date of creation of the bundle or the creator.
             </p> 		   
             <p>   
                <a href="#narrative-example-expanded-1-a"/>Example 3</a>:
@@ -152,8 +155,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
                  class="example">{% escape %}{% include "includes/prov/examples/eg-25-extended-crime-file-example/rdf/extended-crime-file-pt2.ttl" %}{% endescape %}</pre> 
          </div>
 		   
-		   <p>
-		   Agent <code>ex:John</code> also named the URI of the original source (<code>ex:aggregatedByRegions</code>). All the provenance statements related to his post
+		   <p>Agent <code>:John</code> also named the URI of the original source (<code>:aggregatedByRegions</code>). All the provenance statements related to his post
 		   are grouped in a new <span class="repeated">prov:Bundle</span>.
 		   
 		   Unfortunately, there was a problem in the servers where <code>:post19201</code> was being stored, and all the data related to the post was lost permanently. Thus, the system
