--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -90,7 +90,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
 
         <div id="narrative-example-expanded-1" about="#narrative-example-expanded-1" 
             typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-           <p>The following example illustrates the expanded terms using the crime chart example from the previous section. 
+           <p>The following example illustrates the expanded terms using the <a href="#narrative-example-simple-1">crime chart example</a> from the previous section. 
               After creating the chart, Derek published a post about his work with the aggregated dataset.
             </p> 
             <p>   
