save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -90,10 +90,10 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
 
         <div id="narrative-example-expanded-1" about="#narrative-example-expanded-1" 
             typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-           <p>The following example illustrates the expanded terms using the <a href="#narrative-example-simple-1">crime chart example</a> from the previous section. 
+           <p>The following examples illustrate the expanded terms by elaborating the <a href="#narrative-example-simple-1">crime chart example</a> from the previous section. 
               After creating the chart, Derek published a post about his work with the aggregated dataset.
             </p> 
-            <p>   
+            <p>
                <a href="#narrative-example-expanded-1"/>Example 2</a>:
             </p>
 
@@ -122,9 +122,10 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
                     alt="PROV-O Starting Point terms"/>
 
                <div class="figcaption"><a href="#expanded-example-illustration-1">Figure 4</a>. 
-                  An illustration of the PROV-O assertions in <a href="#narrative-example-expanded-1">Example 3</a>, 
+                  An illustration of the PROV-O assertions in <a href="#narrative-example-expanded-1">Example 3</a>,<br/>
                   where Derek published two versions of a blog for the National Newspaper, Inc.<br/>
-                  The diagrams in this document depict Entities as yellow ovals, Activities as blue rectangles, and Agents as orange pentagons.
+                  The diagrams in this document depict Entities as yellow ovals, Activities as blue rectangles, and Agents as orange pentagons.<br/>
+                  The responsibility properties are shown in pink.
                </div>
          </div>
 
