--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -91,7 +91,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
         <div id="narrative-example-expanded-1" about="#narrative-example-expanded-1" 
             typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
            <p>The following examples illustrate the expanded terms by elaborating the <a href="#narrative-example-simple-1">crime chart example</a> from the previous section. 
-              After aggregating the dataset and creating the chart, Derek published a post about his work.
+              After aggregating the dataset and creating the chart, Derek published a post exhibiting his work.
            </p> 
            <p>
               <a href="#narrative-example-expanded-1"/>Example 2</a>:
