--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -91,7 +91,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
         <div id="narrative-example-expanded-1" about="#narrative-example-expanded-1" 
             typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
            <p>The following examples illustrate the expanded terms by elaborating the <a href="#narrative-example-simple-1">crime chart example</a> from the previous section. 
-              After aggregating the dataset and creating the chart, Derek published a post exhibiting his work.
+              After aggregating the dataset and creating the chart, Derek published a post to exhibit his work.
            </p> 
            <p>
               <a href="#narrative-example-expanded-1"/>Example 2</a>:
@@ -103,8 +103,8 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
 		   
 		   <p>
 		   Agent <code>:derek</code>, acting again on behalf of the <code>:national_newspaper_inc</code> organization, 
-		   published a post about his recent changes to the aggregated file (<code>:aggregatedByRegions</code>) using the tool <code>:postEditor</code> 
-         (which was included in a user action tracking system compliant to PROV). 
+		   used the <code>:postEditor</code> tool to publish a post about his recent data analysis <code>:aggregatedByRegions</code>.
+         The tool tracks user actions using PROV-O, which is in turn published as a Bundle.
 		   The blog editor tool recorded that <code>:derek</code> was the one who started and ended the publishing activity <code>:publicationActivity1123</code>,
          which generated the post <code>:post9821v1</code>. The post
 		   included a permanent link where the content of the latest version is shown
