--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -104,7 +104,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
 		   <p>
 		   Agent <code>:derek</code>, acting again on behalf of the <code>:national_newspaper_inc</code> organization, 
 		   used the <code>:postEditor</code> tool to publish a post about his recent data analysis <code>:aggregatedByRegions</code>.
-         The blog editor tool that Derek used tracked his as PROV-O assertions and published them as a Bundle.
+         The blog editor tool that Derek used tracked his actions as PROV-O assertions and published them as a Bundle.
 		   The tool recorded that <code>:derek</code> started and ended the publishing activity <code>:publicationActivity1123</code>,
          that generated the post <code>:post9821v1</code>. The post
 		   included a permanent link where the content of the latest version is shown
