save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -105,11 +105,11 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
 		   Agent <code>:derek</code>, acting again on behalf of the <code>:national_newspaper_inc</code> organization, 
 		   used the <code>:postEditor</code> tool to publish a post about his recent data analysis <code>:aggregatedByRegions</code>.
          The blog editor tool that Derek used tracked his actions as PROV-O assertions and published them as a Bundle (the current file <code>&lt;&gt;</code>).
-		   The tool recorded that <code>:derek</code> started and ended the publishing activity <code>:publicationActivity1123</code>,
+		   The tool recorded that <code>:derek</code> started and ended the publishing activity (<code>:publicationActivity1123</code>)
          that generated the post <code>:post9821v1</code>. The post
 		   included a permanent link where the content of the latest version is shown
 		   (<code>:more-crime-happens-in-cities</code>) in addition to a snapshot of the current version (<code>:postContent0</code>). 
-         Derek also included additional descriptions of the post, such as its title.
+         Derek also included additional domain-specific descriptions of the post, such as its title.
 		   </p>
 		   <p>
 		   However, shortly after having published the post, Derek noticed a typographical error. 
