--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -101,23 +101,21 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
                 class="example">{% escape %}{% include "includes/prov/examples/eg-25-extended-crime-file-example/rdf/extended-crime-file-pt1.ttl" %}{% endescape %}</pre> 
         </div>
 		   
-		   <p>
-		   Agent <code>:derek</code>, acting again on behalf of the <code>:national_newspaper_inc</code> organization, 
+		   <p>Agent <code>:derek</code>, acting again on behalf of the <code>:national_newspaper_inc</code> organization, 
 		   used the <code>:postEditor</code> tool to publish a post about his recent data analysis <code>:aggregatedByRegions</code>.
          The blog editing tool that Derek used tracked his actions as PROV-O assertions and published them as a Bundle (the current file <code>&lt;&gt;</code>).
 		   The tool recorded that <code>:derek</code> started and ended the publishing activity (<code>:publicationActivity1123</code>)
          that generated the post <code>:post9821v1</code>. The post
-		   included a permanent link where the content of the latest version is shown
-		   (<code>:more-crime-happens-in-cities</code>) in addition to a snapshot of the current version (<code>:postContent0</code>). 
+		   included a permanent link where the content of the latest version is available
+		   (<code>:more-crime-happens-in-cities</code>) in addition to a textual snapshot of the current version (using prov:value). 
          Derek also included additional domain-specific descriptions of the post, such as its title.
 		   </p>
-		   <p>
-		   However, shortly after having published the post, Derek noticed a typographical error. 
-         He did not want to record the activity that led to the new version, so he just created a new version and 
-		   summarized the changes in a revision of the original post (<code>:post9821v2</code>). This revision was also an alternate of the original post, 
-         since they were both forms of the long-standing blog.
-         Thus, the permalink to the latest version (<code>:more-crime-happens-in-cities</code>) remained the same in the new revision, 
-         but a different URL was given for its snapshot (<code>ex:postContent1</code>).
+
+		   <p>Shortly after publishing the post, Derek noticed a typographical error in his narrative.
+         Because the fix would be minimal, he did not record the activity that led to the new version.
+         Instead, he related the new version (<code>:post9821v2</code>) as a revision of the previous (<code>:post9821v1</code>).
+		   Since both versions of the blog are forms of the long-standing blog permalink <code>:more-crime-happens-in-cities</code>, 
+         the revisions are alternates of one another.
 		   </p>		   
 
          <div id="expanded-example-illustration-1" style="text-align: center;" class="figure">
