save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -115,7 +115,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
          Because the fix would be minimal, he did not record the activity that led to the new version.
          Instead, he related the new version (<code>:post9821v2</code>) as a revision of the previous (<code>:post9821v1</code>).
 		   Since both versions of the blog are forms of the long-standing blog permalink <code>:more-crime-happens-in-cities</code>, 
-         the revisions are alternates of one another.
+         the revisions are alternates of one another and each is a <a href="#specializationOf" class="qname">prov:specializationOf</a> of <code>:more-crime-happens-in-cities</code>.
 		   </p>		   
 
          <div id="expanded-example-illustration-1" style="text-align: center;" class="figure">
