--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -125,10 +125,10 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
                     alt="PROV-O Starting Point terms"/>
 
                <div class="figcaption"><a href="#expanded-example-illustration-1">Figure 4</a>. 
-                  An illustration of the PROV-O assertions in <a href="#narrative-example-expanded-1">Example 3</a>, where Derek published<br/>
-                  two versions of a blog for the National Newspaper, Inc.<br/>
-                  The diagrams in this document depict Entities as yellow ovals, Activities as blue rectangles, and Agents as orange pentagons.<br/>
-                  The responsibility properties are shown in pink.
+                  An illustration of the PROV-O assertions in <a href="#narrative-example-expanded-1">Example 3</a>, where Derek<br/>
+                  published two versions of a blog for the National Newspaper, Inc.<br/>
+                  The diagrams in this document depict Entities as yellow ovals, Activities as blue rectangles,<br/>
+                  and Agents as orange pentagons. The responsibility properties are shown in pink.
                </div>
          </div>
 
