--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -159,15 +159,15 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
                  class="example">{% escape %}{% include "includes/prov/examples/eg-25-extended-crime-file-example/rdf/extended-crime-file-pt2.ttl" %}{% endescape %}</pre> 
          </div>
 		   
-		   <p>Agent <code>:john</code> also named the URI of the original source (<code>:aggregatedByRegions</code>). All the provenance statements related to his post
-		   are grouped in a new <span class="repeated">prov:Bundle</span>.
-		   
-		   Unfortunately, there was a problem in the servers where <code>:post19201</code> was being stored, and all the data related to the post was lost permanently. Thus, the system
-		   invalidated the entity automatically and notified John about the error.
-		   </p> 		   
-		   
+	   
          <div id="narrative-example-expanded-3" about="#narrative-example-expanded-3" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-            <p>   
+            <p>Agent <code>:john</code> also named the URI of the original source (<code>:aggregatedByRegions</code>). All the provenance statements related to his post
+            are grouped in a new <span class="repeated">prov:Bundle</span>.
+            
+            Unfortunately, there was a problem in the servers where <code>:post19201</code> was being stored, and all the data related to the post was lost permanently. 
+            Thus, the system invalidated the entity automatically and notified John about the error.
+            </p> 		   
+	         <p>   
                <a href="#narrative-example-expanded-3"/>Example 5</a>:
             </p>
             <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/examples/eg-25-extended-crime-file-example/rdf/extended-crime-file-pt4.ttl"
