save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -2,7 +2,7 @@
      <section id="description-qualified-terms">
        <h3>Qualified Terms</h3>
 
-       <p>The terms in the Qualified Terms category are the result of
+       <p>The Qualified Terms category is the result of
          applying the <strong>Qualification Pattern</strong> [[LD-Patterns-QR]] to the simple (unqualified)
          relations available in the <a href="#prov-starting-point-owl-terms-at-a-glance">Starting Point</a> and 
          <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a> categories.  
