save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -32,7 +32,7 @@
       </div>
 
       <div id="qualified-forms-expanded" style="padding: 10px">
-         <p>Six <a href="#description-expanded-terms">Expanded</a> relations that can be further described using the Qualification Pattern.
+         <p>Seven <a href="#description-expanded-terms">Expanded</a> relations that can be further described using the Qualification Pattern.
          </p>
          <div style="text-align: center">
             {% include "includes/qualifed-forms-expanded.html" %}
