save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -16,9 +16,9 @@
          The following two tables list the influence relations that can be qualified using the Qualification Pattern, along with the properties used to qualify them. 
 
          For example, the second row of the first table indicates that to elaborate how an <span class="repeated">prov:Activity</span>
-         <span class="repeated">prov:used</span> a particular <span class="repeated">prov:Entity</span>, one creates an instance of <span class="repeated">prov:Usage</span>.
-         While the <span class="repeated">prov:Usage</span> cites the influencing entity with the <span class="repeated">prov:entity</span> property,
-         the influenced <span class="repeated">prov:Activity</span> cites the <span class="repeated">prov:Usage</span> with the property 
+         <span class="repeated">prov:used</span> a particular <span class="repeated">prov:Entity</span>, one creates an instance of <span class="repeated">prov:Usage</span>
+         to cite the influencing entity with the <span class="repeated">prov:entity</span> property.
+         The influenced <span class="repeated">prov:Activity</span> cites the <span class="repeated">prov:Usage</span> with the property 
          <span class="repeated">prov:qualifiedUsage</span>.
          This structure is illustrated in <a href="#qualified-terms-figure">Figure 4a</a> below.
        </p>
