--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -10,7 +10,7 @@
          Entities, Activities, and Agents.
        </p>
 
-       <p>The Qualification Pattern consists of restating the unqualified
+       <p>The Qualification Pattern restates the unqualified
          relation by using an intermediate class that represents the influence between two resources. 
          This new instance, in turn, can be annotated with additional descriptions about the influence relationship between the two resources. 
          The following two tables list the influence relations that can be qualified using the Qualification Pattern, along with the properties used to qualify them. 
