save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -12,7 +12,7 @@
 
        <p>The Qualification Pattern restates the unqualified
          relation by using an intermediate class that represents the influence between two resources. 
-         This new instance, in turn, can be annotated with additional descriptions about the influence relationship between the two resources. 
+         This new instance, in turn, can be annotated with additional descriptions of the influence relationship between the two resources. 
          The following two tables list the influence relations that can be qualified using the Qualification Pattern, along with the properties used to qualify them. 
 
          For example, the second row of the first table indicates that to elaborate how an <span class="repeated">prov:Activity</span>
