save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -6,13 +6,13 @@
          applying the <strong>Qualification Pattern</strong> [[LD-Patterns-QR]] to the simple (unqualified)
          relations available in the <a href="#prov-starting-point-owl-terms-at-a-glance">Starting Point</a> and 
          <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a> categories.  
-      The terms in this category are for users who wish to provide further details about the provenance-related influence among
+         The terms in this category are for users who wish to provide further details about the provenance-related influence among
          Entities, Activities, and Agents.
        </p>
 
        <p>The Qualification Pattern restates the unqualified influence 
          relation by using an intermediate class that represents the influence between two resources. 
-         This new instance, in turn, can be annotated with additional descriptions of the influence relationship between the two resources. 
+         This new instance, in turn, can be annotated with additional descriptions of the influence that one resource had upon another.
          The following two tables list the influence relations that can be qualified using the Qualification Pattern, along with the properties used to qualify them. 
 
          For example, the second row of the first table indicates that to elaborate how an <span class="repeated">prov:Activity</span>
