save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -10,7 +10,7 @@
          Entities, Activities, and Agents.
        </p>
 
-       <p>The Qualification Pattern restates the unqualified influence 
+       <p>The Qualification Pattern restates an unqualified influence 
          relation by using an intermediate class that represents the influence between two resources. 
          This new instance, in turn, can be annotated with additional descriptions of the influence that one resource had upon another.
          The following two tables list the influence relations that can be qualified using the Qualification Pattern, along with the properties used to qualify them. 
