--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -20,7 +20,7 @@
          that cites the influencing entity with the <span class="repeated">prov:entity</span> property.
          The influenced <span class="repeated">prov:Activity</span> references the <span class="repeated">prov:Usage</span> with the property 
          <span class="repeated">prov:qualifiedUsage</span>.
-         The resulting structure is illustrated in <a href="#qualified-terms-figure">Figure 4a</a> below.
+         The resulting structure for most of the qualified forms is illustrated in <a href="#qualified-terms-figure">Figure 4a</a> below.
        </p>
 
       <div id="qualified-forms-starting-point" style="padding: 10px">
