save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -41,14 +41,14 @@
 
 
       <p>
-       The qualification classes and properties shown in the previous two tables can also be found in the <a href="#cross-reference">cross reference</a> 
+       The qualification classes and properties shown in the previous two tables can also be found in the normative <a href="#cross-reference">cross reference</a> 
         in the next section of this document. 
 
          All influence classes (e.g. <span class="repeated">prov:Association</span>, <span class="repeated">prov:Usage</span>) are extensions of 
          <a class="qname" href="#Influence">prov:Influence</a> and either 
          <a class="qname" href="#EntityInfluence">prov:EntityInfluence</a>, 
          <a class="qname" href="#ActivityInfluence">prov:ActivityInfluence</a>, or
-         <a class="qname" href="#AgentInfluence">prov:AgentInfluence</a>, which determine the property to use to cite the influencing resource (either
+         <a class="qname" href="#AgentInfluence">prov:AgentInfluence</a>, which determine the property used to cite the influencing resource (either
          <a class="qname" href="#entity">prov:entity</a>,
          <a class="qname" href="#activity">prov:activity</a>, or
          <a class="qname" href="#agent">prov:agent</a>, respectively).
@@ -116,7 +116,7 @@
             asserted unless it adds additional information. -->
 
       <p>In addition to the previous two tables, <a href="#qualified-terms-figure">Figure 4</a> 
-         illustrates the classes and properties needed to apply the qualification pattern to the thirteen unqualified influence relations. 
+         illustrates the classes and properties needed to apply the qualification pattern to the fourteen unqualified influence relations. 
 
          For example, while <a class="qname" href="#qualifiedUsage">prov:qualifiedUsage</a>, 
          <a class="qname" href="#Usage">prov:Usage</a>, and <a class="qname" href="#entity">prov:entity</a> are used to qualify 
@@ -124,7 +124,7 @@
    
          <a class="qname" href="#qualifiedAssociation">prov:qualifiedAssociation</a>, <a class="qname" href="#Association">prov:Association</a>, 
          and <a class="qname" href="#agent">prov:agent</a> are used to qualify <span class="repeated">prov:wasAssociatedWith</span> 
-         relations. This pattern applies to the eleven other influence relations that can be qualified.
+         relations. This pattern applies to the twelve other influence relations that can be qualified.
       </p>
 
       <p>In subfigure <strong>a</strong> the <span class="repeated">prov:qualifiedUsage</span> property parallels the <span class="repeated">prov:used</span> property and references an instance of 
