--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -36,7 +36,7 @@
          A <span class="repeated">prov:Bundle</span> is a named set of provenance descriptions, which may itself have provenance. 
          The named set of provenance descriptions may be expressed as PROV-O or any other form.
          The subclass of Bundle that names a set of PROV-O assertions is not provided by PROV-O, since it is more appropriate to do so using other recommendations, 
-         standards, or technologies. In any case, a Bundle of PROV-O assertions is an abstract set of RDF triples, and adding or removing a triple creates a distinct 
+         standards, or technologies. In any case, a Bundle of PROV-O assertions is an abstract set of RDF triples, and adding or removing a triple creates a new, distinct 
          Bundle of PROV-O assertions.
          </p>
       </div>
