save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -36,7 +36,7 @@
          A <span class="repeated">prov:Bundle</span> is a named set of provenance descriptions, which may itself have provenance. 
          The named set of provenance descriptions may be expressed as PROV-O or any other form.
          The subclass of Bundle that names a set of PROV-O assertions is not provided by PROV-O, since it is more appropriate to do so using other recommendations, 
-         standards, or technologies. In any case, a Bundle of PROV-O assertions is an abstract set of RDF triples, and adding or removing a triple creates a new, distinct 
+         standards, or technologies. In any case, a Bundle of PROV-O assertions is an abstract set of RDF triples, and adding or removing a triple creates a new distinct 
          Bundle of PROV-O assertions.
          </p>
       </div>
@@ -55,7 +55,7 @@
       by repeating some or all of the original, 
       <a href="#wasRevisionOf" class="qname">prov:wasRevisionOf</a> indicates that the derived Entity contains substantial content from the original Entity 
       (e.g., two editions of a book), and 
-      <a href="#hadPrimarySource" class="qname">prov:hadPrimarySource</a> cites an preceding Entity produced by some agent with direct experience and 
+      <a href="#hadPrimarySource" class="qname">prov:hadPrimarySource</a> cites a preceding Entity produced by some agent with direct experience and 
       knowledge about the topic (such as a reading from a sensor, or a journal written during an historical event). 
       </p>
 	  
