save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -139,8 +139,8 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
             This version was a specialization of the original post, and an alternate of the version modified by Derek. 
             Since the provenance produced by the activities of Derek and Monica corresponded to different user views, the system
 		      automatically published it in different <a href="#Bundle" class="qname">prov:Bundles</a>. 
-            The system also tagged them as the involved users 
-			   with the bundle (so as to be able to locate easily their actions) and added additional metadata, such as the date of creation of the bundle or the creator.
+            The tool also asserted provenance about the bundle that it produced (e.g., the date of creation and its creator).
+            Because a bundle is a kind of entity, all of the provenance assertions about entities apply to assertions about bundles.
             </p> 		   
             <p>   
                <a href="#narrative-example-expanded-1-a"/>Example 3</a>:
