--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -136,7 +136,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
  
 		 <div id="narrative-example-expanded-1-a" about="#narrative-example-expanded-1-a" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
            <p>Shortly after Derek published his blog post, Monica adapted the text for a wider audience in a new post (<code>:post9822</code>). 
-            This version was a specialization of the original post, and an alternate of the version modified by Derek. 
+            This rewrite is an alternate, abbreviated view of the same topic that Derek wrote about and began from his original text.
             Since the provenance produced by the activities of Derek and Monica corresponded to different user views, the system
 		      automatically published it in different <a href="#Bundle" class="qname">prov:Bundles</a>. 
             The tool also asserted provenance about the bundle that it produced (e.g., the date of creation and its creator).
