save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -151,7 +151,10 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
         </div>
 		
          <div id="narrative-example-expanded-3" about="#narrative-example-expanded-3" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-            <p>After some time, John wrote his own conclusions quoting the previous two posts:
+            <p>After some time, John wrote his own conclusions in his own post (<code>:post19201</code>) quoting the previous two posts. 
+               Each quote that John makes (<code>:quote_from_monica</code> and <code>:quote_from_derek</code>) is a new Entity derived from the 
+               previous blogs and is annotated with the time that the quote was taken.
+               The provenance of John's blog notes that his post is the result of the quotes that he took from Derek and Monica.
             </p>
             <p>
                <a href="#narrative-example-expanded-3"/>Example 4</a>:
