--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -138,8 +138,8 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
            <p>Shortly after Derek published his blog post, Monica adapted the text for a wider audience in a new post (<code>:post9822</code>).
             This rewrite is an alternate, abbreviated view of the same topic that Derek wrote about and was created from his original text.
             Since the provenance produced by the activities of Derek and Monica corresponded to different user views, the system
-		      automatically published it in different <a href="#Bundle" class="qname">prov:Bundles</a>.
-            The tool also asserted provenance about the bundle that it produced (e.g., the date of creation and its creator).
+		      automatically published it in a different <a href="#Bundle" class="qname">prov:Bundle</a>.
+            The tool also asserted provenance about the bundle that it produced (e.g., the date of creation, its creator, and the fact that it Derek's bundle was used).
             Because a bundle is a kind of entity, all provenance assertions that can be made about entities can also be made about bundles.
             The use of bundles enables the creation of provenance of provenance.
             </p> 		
@@ -152,7 +152,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
 		
          <div id="narrative-example-expanded-3" about="#narrative-example-expanded-3" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
             <p>After some time, John wrote his own conclusions in his own post (<code>:post19201</code>) quoting the previous two posts. 
-               Each quote that John makes (<code>:quote_from_monica</code> and <code>:quote_from_derek</code>) is a new Entity derived from the 
+               Each quote that John makes (<code>:quote_from_monica</code> and <code>:quote_from_derek</code>) is a new entity derived from the 
                previous blogs and is annotated with the time that the quote was taken.
                The provenance of John's blog notes that his post is the result of the quotes that he took from Derek and Monica.
                The blog post is also derived from Derek's <code>:aggregatedByRegions</code> dataset because John inspected it and found a 
