save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -20,11 +20,12 @@
          that indicates the influencing entity with the <span class="repeated">prov:entity</span> property.
          Meanwhile, the influenced <span class="repeated">prov:Activity</span> indicates the <span class="repeated">prov:Usage</span> with the property 
          <span class="repeated">prov:qualifiedUsage</span>.
-         The resulting structure is illustrated in <a href="#qualified-terms-figure">Figure 4a</a> below.
+         The resulting structure that qualifies the an Activity's usage of an Entity is illustrated in <a href="#qualified-terms-figure">Figure 4a</a> below.
        </p>
 
       <div id="qualified-forms-starting-point" style="padding: 10px">
-         <p>Seven <a href="#description-starting-point-terms">Starting Point</a> relations that can be further described using the Qualification Pattern.
+         <p>Seven <a href="#description-starting-point-terms">Starting Point</a> relations can be further described using the Qualification Pattern.
+            They are listed in the following table.
          </p>
          <div style="text-align: center">
             {% include "includes/qualifed-forms-starting-point.html" %}
@@ -32,7 +33,8 @@
       </div>
 
       <div id="qualified-forms-expanded" style="padding: 10px">
-         <p>Seven <a href="#description-expanded-terms">Expanded</a> relations that can be further described using the Qualification Pattern.
+         <p>Seven <a href="#description-expanded-terms">Expanded</a> relations can be further described using the Qualification Pattern.
+            They are listed in the following table.
          </p>
          <div style="text-align: center">
             {% include "includes/qualifed-forms-expanded.html" %}
@@ -40,8 +42,7 @@
       </div>
 
 
-      <p>
-       The qualification classes and properties shown in the previous two tables can also be found in the normative <a href="#cross-reference">cross reference</a> 
+      <p>The qualification classes and properties shown in the previous two tables can also be found in the normative <a href="#cross-reference">cross reference</a> 
         in the next section of this document. 
 
          All influence classes (e.g. <span class="repeated">prov:Association</span>, <span class="repeated">prov:Usage</span>) are extensions of 
